# voice-assistant

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh.md  build.cmd  build.sh
.github/workflows/: linux.yml  release.yml  release.yml.bak  release_master.yml  windows.yml  windows.yml.bak
cmake/: windows.cmake
cmake/finders/: FindPulseAudio.cmake
config/: config.linux.yaml  config.windows.yaml  config.yaml  config.yaml.template
doc/c-api/: README.md  example.md
include/api/: http_server.h
include/core/: model_config.h  speech_recognizer.h
src/: CMakeLists.txt  main.cpp
src/api/: http_server.cpp  http_server.h
src/audio/: audio_capture.cpp  audio_capture.h  audio_format.h
src/audio/linux_pulease/: pulse_audio_capture.cpp  pulse_audio_capture.h
src/audio/windows/: wasapi_capture.cpp  wasapi_capture.h
src/audio_recorder/: CMakeLists.txt  README.md  README_zh.md  audio_capture.cpp  main.cpp
src/audio_recorder/common/: deeplx_translator.cpp  deeplx_translator.h  wav_writer.cpp
src/audio_recorder/include/: audio_capture.h  audio_format.h  wav_writer.h
src/audio_recorder/linux/: pulse_audio_capture.cpp  pulse_audio_capture.h
src/audio_recorder/windows/: wasapi_capture.cpp  wasapi_capture.h
src/client/: main.cpp  streaming_client.cpp  test_client.cpp  vad_client.cpp
src/common/: model_config.h
src/core/: CMakeLists.txt  message_bus.cpp  message_bus.h  message_types.h  model_config.h  model_factory.h  speech_recognizer.cpp  subscriber.h  uuid_generator.h  voice_service_impl.cpp  voice_service_impl.h
src/core/audio/: CMakeLists.txt  audio_capture.cpp  audio_capture.h
src/core/audio/windows/: wasapi_capture.cpp  wasapi_capture.h
src/core/recognizer/: CMakeLists.txt  recognizer.h  sherpa_recognizer.cpp  sherpa_recognizer.h
src/core/translator/: CMakeLists.txt  deeplx_translator.h  translator.h
src/proto/: voice_service.proto
src/recognizer/: model_factory.h  recognizer.cpp  recognizer.h
src/recognizer_data/: recognizer_data.cpp  recognizer_data.h
src/server/: main.cpp
src/translator/: translator.cpp  translator.h
src/translator/deepl/: deeplx_translator.cpp  deeplx_translator.h
src/utills/: uuid_generator.h
test/: .env  CMakeLists.txt  requirements.txt  run_tests.sh  test_api.py  test_audio_capture.cpp  test_message_bus.cpp  test_recognizer.cpp  test_translator.cpp  voice_recognition_test.cpp
